# mxnet-to-tflite

./: README.md  mxnet2tflite.py  pyproject.toml
