[tool.poetry]
name = "mxnet-to-tflite"
version = "0.1.0"
description = ""
authors = ["Ryohei Ikegami <iofg2100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
onnx = "1.3.0"
numpy = "^1.18.1"
mxnet = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
